add serviceParameter implementation

--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ MYSQL_ENABLE=true
 MYSQL_ADDRESS=localhost:3306
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=
-MYSQL_DB_NAME=db_vendor
+MYSQL_DB_NAME=testing
 MYSQL_MAX_IDLE_CONNECTION=15
 MYSQL_MAX_OPEN_CONNECTION=15
 MYSQL_MAX_LIFETIME_CONNECTION=60s
@@ -47,7 +47,7 @@ REDIS_MAX_CONN_AGE=3m
 MEMCACHE_ENABLE=true
 
 #Kafka
-KAFKA_ENABLE=true
+KAFKA_ENABLE=false
 KAFKA_HOST=localhost:9092
 KAFKA_CLIENT_ID=vendor-bidding-service
 KAFKA_CONSUMER_GROUP=default-vendor-bidding-service
