--- a/.env
+++ b/.env
@@ -47,10 +47,10 @@ REDIS_MAX_CONN_AGE=3m
 MEMCACHE_ENABLE=true
 
 #Kafka
-KAFKA_ENABLE=false
+KAFKA_ENABLE=true
 KAFKA_HOST=localhost:9092
-KAFKA_CLIENT_ID=vendor-bidding-service
-KAFKA_CONSUMER_GROUP=default-vendor-bidding-service
+KAFKA_CLIENT_ID=leaf-example
+KAFKA_CONSUMER_GROUP=default-leaf-example-local
 KAFKA_VERSION=2.6.0
 KAFKA_CONSUMER_WORKER=100
 KAFKA_CONSUMER_RETRY_MAX=10
@@ -62,15 +62,16 @@ KAFKA_SLACK_NOTIFICATION_HOOK=https://hooks.slack.com/services/T3RSNN059/B01E2NT
 KAFKA_SLACK_NOTIFICATION_TIMEOUT=12s
 
 #Worker
+WORKER_EXAMPLE_INTERVAL=120s
 
-#Ravens
-EXAMPLE_HOST=http://localhost:3000
+#Web Service
+EXAMPLE_HOST=http://localhost:8090
 EXAMPLE_TIMEOUT_DURATION=3s
 EXAMPLE_RETRY_COUNT=1
 
 SENTRY_ENABLE=true
 SENTRY_ENVIRONMENT=development
-SENTRY_DSN=https://342bf042ba0a4d72b2d535ed9646535a@newsentry.tanihub.com/21
-SENTRY_APP_NAME=vendor-bidding-service
+SENTRY_DSN=
+SENTRY_APP_NAME=leaf-example
 SENTRY_SAMPLE_RATE=1
 SENTRY_TRACE_SAMPLE_RATE=1
