add worker, messaging, webservice example

--- a/.env
+++ b/.env
@@ -69,7 +69,7 @@ EXAMPLE_HOST=http://localhost:8090
 EXAMPLE_TIMEOUT_DURATION=3s
 EXAMPLE_RETRY_COUNT=1
 
-SENTRY_ENABLE=true
+SENTRY_ENABLE=false
 SENTRY_ENVIRONMENT=development
 SENTRY_DSN=
 SENTRY_APP_NAME=leaf-example
