--- a/.env
+++ b/.env
@@ -30,13 +30,13 @@ MYSQL_MAX_LIFETIME_CONNECTION=60s
 MYSQL_LOG_MODE=true
 
 #Redis
-REDIS_ENABLE=false
-REDIS_HOST=localhost
+REDIS_ENABLE=true
+REDIS_HOST=localhost:6379
 REDIS_PASSWORD=
 REDIS_DB=0
 REDIS_POOL_SIZE=100
 REDIS_MIN_IDLE_CONNS=10
-REDIS_READ_ONLY=true
+REDIS_READ_ONLY=false
 REDIS_DIAL_TIMEOUT=1s
 REDIS_POOL_TIMEOUT=10s
 REDIS_READ_TIMEOUT=1s
