remove unused file

--- a/.env
+++ b/.env
@@ -69,9 +69,9 @@ EXAMPLE_HOST=http://localhost:8090
 EXAMPLE_TIMEOUT_DURATION=3s
 EXAMPLE_RETRY_COUNT=1
 
-SENTRY_ENABLE=true
+SENTRY_ENABLE=false
 SENTRY_ENVIRONMENT=development
-SENTRY_DSN=
+SENTRY_DSN=http://google.com
 SENTRY_APP_NAME=leaf-example
 SENTRY_SAMPLE_RATE=1
 SENTRY_TRACE_SAMPLE_RATE=1
